# atm-interview

./: .gitignore  Cargo.toml  README.md  clippy.toml
src/: input.rs  ledger.rs  main.rs  transaction.rs
