[package]
name = "atm-interview"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2024"
rust-version = "1.85.0"
authors = ["Kristof Mattei"]
description = "atm-interview"
license-file = "LICENSE"
categories = ["simulation"]
keywords = ["atm", "interview"]
repository = "https://github.com/kristof-mattei/atm-interview"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[features]
coverage = []

[dependencies]
clap = { version = "4.5.31", features = [
    "cargo",
    "string",
    "derive",
    "error-context",
] }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
csv = "1.3.1"
hashbrown = "0.15.2"
rust_decimal = { version = "1.36.0", features = [
    "serde-with-arbitrary-precision",
] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7.13", features = ["rt"] }

# OpenSSL for musl
# [target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
